--- a/xrAI/xrAI.vcproj
+++ b/xrAI/xrAI.vcproj
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="xrAI"
 	ProjectGUID="{EA5932F3-02FE-4AD3-89E8-7072DC465D25}"
 	RootNamespace="xrAI"
 	SccProjectName="&quot;$/xrAI&quot;, ULAAAAAA"
 	SccLocalPath="."
 	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -97,8 +96,6 @@
 				StackReserveSize="0"
 				StackCommitSize="0"
 				LargeAddressAware="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -118,6 +115,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -162,11 +162,13 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				EnableFiberSafeOptimizations="false"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\MagicSoftware\FreeMagic\Include&quot;;&quot;X:\External Library\loki&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\boost_1_30_0&quot;;X:\xrLUA_JIT\src"
 				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS,AI_COMPILER"
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
@@ -199,6 +201,7 @@
 				OutputFile="x:\xrAI.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="x:\"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="true"
@@ -206,8 +209,6 @@
 				StackReserveSize="0"
 				StackCommitSize="0"
 				LargeAddressAware="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -227,6 +228,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -270,7 +274,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="false"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\loki&quot;;&quot;X:\External Library\boost_1_30_0&quot;;&quot;X:\External Library\MagicSoftware\FreeMagic\Include&quot;"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\MagicSoftware\FreeMagic\Include&quot;;&quot;X:\External Library\loki&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\boost_1_30_0&quot;;X:\xrLUA_JIT\src"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,AI_COMPILER"
 				StringPooling="true"
 				RuntimeLibrary="3"
@@ -310,7 +314,7 @@
 				OutputFile="x:\xrAI.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="X:\"
+				AdditionalLibraryDirectories="x:\"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="true"
@@ -319,8 +323,6 @@
 				StackCommitSize="0"
 				LargeAddressAware="2"
 				TerminalServerAware="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -340,6 +342,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -1300,6 +1305,14 @@
 							<File
 								RelativePath=".\goap_test.cpp"
 								>
+								<FileConfiguration
+									Name="Release|Win32"
+									ExcludedFromBuild="true"
+									>
+									<Tool
+										Name="VCCLCompilerTool"
+									/>
+								</FileConfiguration>
 								<FileConfiguration
 									Name="Mixed|Win32"
 									ExcludedFromBuild="true"
