--- a/xrLC/xrLC.vcproj
+++ b/xrLC/xrLC.vcproj
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="xrLC"
 	ProjectGUID="{A4ABD75E-825B-4D09-B3B2-2709682E40C8}"
 	RootNamespace="xrLC"
 	SccProjectName="&quot;$/xrLC&quot;, TLAAAAAA"
 	SccLocalPath="."
 	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -59,13 +58,13 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="..\xrQSlim\src"
+				AdditionalIncludeDirectories="..\xrQSlim\src;x:\xrCore"
 				PreprocessorDefinitions="_USE_MATH_DEFINES,WIN32,_WINDOWS"
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
-				ForceConformanceInForLoopScope="true"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
@@ -98,13 +97,12 @@
 				OutputFile="x:\xrLC.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="x:\"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="true"
 				SubSystem="2"
 				LargeAddressAware="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -124,6 +122,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -203,8 +204,6 @@
 				GenerateMapFile="true"
 				SubSystem="2"
 				LargeAddressAware="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -224,6 +223,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -269,13 +271,13 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="false"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="..\xrQSlim\src;.\;x:\xrCore"
+				AdditionalIncludeDirectories="..\xrQSlim\src;.\;x:\xrCore;&quot;X:\External Library\MagicSoftware\FreeMagic\Include&quot;"
 				PreprocessorDefinitions="_USE_MATH_DEFINES,WIN32,_DEBUG,_WINDOWS"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
-				ForceConformanceInForLoopScope="true"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
@@ -306,6 +308,7 @@
 				OutputFile="x:\xrLC.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="x:\"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="true"
@@ -313,8 +316,6 @@
 				SubSystem="2"
 				LargeAddressAware="2"
 				TerminalServerAware="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="0"
 			/>
 			<Tool
@@ -334,6 +335,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
