--- a/xrNetServer/xrNetServer.vcproj
+++ b/xrNetServer/xrNetServer.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="xrNetServer"
 	ProjectGUID="{435BAC9A-B225-457D-AB40-C9BD0CC8838C}"
 	RootNamespace="xrNetServer"
@@ -9,7 +9,6 @@
 	SccAuxPath="SAK"
 	SccLocalPath="SAK"
 	SccProvider="SAK"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -103,8 +102,6 @@
 				SubSystem="0"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)\xrNetServer.lib"
 			/>
 			<Tool
@@ -124,6 +121,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -210,8 +210,6 @@
 				SubSystem="2"
 				OptimizeReferences="0"
 				EnableCOMDATFolding="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrNetServer.lib"
 			/>
 			<Tool
@@ -231,6 +229,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -271,7 +272,7 @@
 				AdditionalOptions=""
 				Optimization="0"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="..;x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;"
+				AdditionalIncludeDirectories=".."
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;XR_NETSERVER_EXPORTS"
 				StringPooling="false"
 				MinimalRebuild="true"
@@ -309,12 +310,9 @@
 				OutputFile="$(OutDir)\xrNetServer.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="X:\External Library\dxsdk_feb2005\Lib\x86"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)\xrNetServer.lib"
 			/>
 			<Tool
@@ -334,6 +332,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -415,8 +416,6 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="$(OutDir)\xrNetServer.lib"
 			/>
 			<Tool
@@ -436,6 +435,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
