--- a/xr_3da/xrCPU_Pipe/xrCPU_Pipe.vcproj
+++ b/xr_3da/xrCPU_Pipe/xrCPU_Pipe.vcproj
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="xrCPU_Pipe"
 	ProjectGUID="{CA0649DD-D089-423A-981C-46B57A884EB9}"
 	RootNamespace="xrCPU_Pipe"
 	SccProjectName="&quot;$/xr_3da/xrCPU_Pipe&quot;, ZTDAAAAA"
 	SccLocalPath="."
 	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -103,8 +102,6 @@
 				SubSystem="0"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrCPU_Pipe.lib"
 			/>
 			<Tool
@@ -124,6 +121,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -165,7 +165,6 @@
 				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="0"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG,DEBUG;_WINDOWS;_USRDLL;XRCPU_PIPE_EXPORTS"
 				StringPooling="false"
 				MinimalRebuild="true"
@@ -207,15 +206,12 @@
 				OutputFile="x:\xrCPU_Pipe.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="&quot;X:\External Library\dxsdk_feb2005\Lib\x86&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				GenerateMapFile="true"
 				MapFileName="x:\xrCPU_Pipe.map"
 				MapExports="false"
 				OptimizeReferences="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrCPU_Pipe.lib"
 			/>
 			<Tool
@@ -235,6 +231,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -320,8 +319,6 @@
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				MapFileName="x:\xrCPU_Pipe.map"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrCPU_Pipe.lib"
 				TargetMachine="0"
 			/>
@@ -342,6 +339,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -430,8 +430,6 @@
 				MapFileName="x:\xrCPU_Pipe.map"
 				MapExports="false"
 				OptimizeReferences="0"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrCPU_Pipe.lib"
 			/>
 			<Tool
@@ -451,6 +449,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
