--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="8,00"
 	Name="xrGame"
 	ProjectGUID="{A15B9EF4-D198-45DE-8836-C736D09FF389}"
 	RootNamespace="xrGame"
 	SccProjectName="&quot;$/xr_3da/xrGame&quot;, LSDAAAAA"
 	SccLocalPath="."
 	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
-	TargetFrameworkVersion="131072"
 	>
 	<Platforms>
 		<Platform
@@ -103,8 +102,6 @@
 				GenerateMapFile="true"
 				MapFileName="x:\xrGame.map"
 				MapExports="false"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrGame.lib"
 			/>
 			<Tool
@@ -124,6 +121,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -167,7 +167,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="false"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;;&quot;X:\External Library\loki&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\boost_1_30_0&quot;;X:\xrODE\include;X:\xrLUA_JIT\src"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;;&quot;X:\External Library\boost_1_30_0&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\loki&quot;;X:\xrLUA_JIT\src;X:\xrODE\include"
 				PreprocessorDefinitions="DEBUG,MIXED,WIN32;NDEBUG;_WINDOWS;_USRDLL;XRGAME_EXPORTS;dSINGLE;MSVC"
 				StringPooling="true"
 				RuntimeLibrary="2"
@@ -177,7 +177,7 @@
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
-				PrecompiledHeaderFile="$(IntDir)/$(TargetName).pch"
+				PrecompiledHeaderFile=".\Mixed/xrGame.pch"
 				AssemblerOutput="0"
 				AssemblerListingLocation="Mixed\"
 				ObjectFile="Mixed\"
@@ -187,7 +187,7 @@
 				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4005;4018;4812;4482;4996"
+				DisableSpecificWarnings="4812;4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -207,13 +207,11 @@
 				OutputFile="x:\xrGame.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="X:\;&quot;X:\External Library\dxsdk_feb2005\Lib\x86&quot;"
+				AdditionalLibraryDirectories="X:\External Library\dxsdk_feb2005\Lib\x86"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				GenerateMapFile="true"
 				MapFileName=".\Mixed/xrGame.map"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrGame.lib"
 				TargetMachine="1"
 			/>
@@ -234,6 +232,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -272,20 +273,19 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Ze"
-				Optimization="3"
+				Optimization="0"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;;&quot;X:\External Library\loki&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\boost_1_30_0&quot;;X:\xrODE\include;X:\xrLUA_JIT\src"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;;&quot;X:\External Library\boost_1_30_0&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\loki&quot;;X:\xrLUA_JIT\src;X:\xrODE\include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;_USRDLL;XRGAME_EXPORTS;dSINGLE;MSVC"
 				StringPooling="true"
 				ExceptionHandling="0"
 				SmallerTypeCheck="false"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
-				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
@@ -295,11 +295,11 @@
 				ObjectFile=".\Release/"
 				ProgramDataBaseFileName="$(IntDir)/"
 				BrowseInformation="0"
-				WarningLevel="4"
+				WarningLevel="3"
 				SuppressStartupBanner="true"
 				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4005;4018;4812;4482;4996"
+				DisableSpecificWarnings="4812;4996"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -314,21 +314,20 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalOptions="/MACHINE:I386 "
+				AdditionalOptions="/MACHINE:I386 /ignore:4996"
 				AdditionalDependencies="odbc32.lib odbccp32.lib x:\xr_3da.lib"
 				OutputFile="x:\xrGame.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="X:\;&quot;X:\External Library\dxsdk_feb2005\Lib\x86&quot;"
+				AdditionalLibraryDirectories="X:\External Library\dxsdk_feb2005\Lib\x86"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				GenerateMapFile="false"
 				MapFileName="x:\xrGame.map"
 				SubSystem="0"
+				LargeAddressAware="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrGame.lib"
 			/>
 			<Tool
@@ -348,6 +347,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
@@ -438,8 +440,6 @@
 				GenerateMapFile="true"
 				MapFileName="x:\xrGame.map"
 				MapExports="false"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				ImportLibrary="x:\xrGame.lib"
 			/>
 			<Tool
@@ -459,6 +459,9 @@
 			/>
 			<Tool
 				Name="VCAppVerifierTool"
+			/>
+			<Tool
+				Name="VCWebDeploymentTool"
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
