fix for vs2005 project files

--- a/xr_3da/xrGame/xrGame.vcproj
+++ b/xr_3da/xrGame/xrGame.vcproj
@@ -169,7 +169,10 @@
 				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;;&quot;X:\External Library\boost_1_30_0&quot;;&quot;X:\External Library\luabind\luabind\luabind\luabind&quot;;&quot;X:\External Library\loki&quot;;X:\xrLUA_JIT\src;X:\xrODE\include"
 				PreprocessorDefinitions="DEBUG,MIXED,WIN32;NDEBUG;_WINDOWS;_USRDLL;XRGAME_EXPORTS;dSINGLE;MSVC"
-				StringPooling="true"
+				StringPooling="false"
+				MinimalRebuild="true"
+				ExceptionHandling="1"
+				SmallerTypeCheck="false"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
@@ -273,7 +276,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				AdditionalOptions="/Ze"
-				Optimization="0"
+				Optimization="3"
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
@@ -286,6 +289,7 @@
 				SmallerTypeCheck="false"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
