--- a/xrCore/xrCore.vcproj
+++ b/xrCore/xrCore.vcproj
@@ -154,6 +154,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				AssemblerOutput="4"
