--- a/xrParticles/xrParticles.vcproj
+++ b/xrParticles/xrParticles.vcproj
@@ -64,6 +64,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderFile=".\Release/xrParticles.pch"
