--- a/xr_3da/XR_3DA.vcproj
+++ b/xr_3da/XR_3DA.vcproj
@@ -288,6 +288,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				PrecompiledHeaderThrough="stdafx.h"
