--- a/Editors/Tools/ETools/ETools.vcproj
+++ b/Editors/Tools/ETools/ETools.vcproj
@@ -93,7 +93,7 @@
 				OutputFile="x:\ETools.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="false"
-				AdditionalLibraryDirectories="X:\External Library\Xiph\Libs"
+				AdditionalLibraryDirectories="&quot;X:\External Library\Xiph\Libs&quot;"
 				IgnoreDefaultLibraryNames="libcmt.lib"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
@@ -275,7 +275,7 @@
 				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\Xiph\Include&quot;;X:\xrQSlim\src"
 				PreprocessorDefinitions="WIN32;DEBUG;NDEBUG;_WINDOWS;_DEBUG;ETOOLS_EXPORTS"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
 				ForceConformanceInForLoopScope="true"
