--- a/xr_3da/xrRender_R1/xrRender_R1.vcproj
+++ b/xr_3da/xrRender_R1/xrRender_R1.vcproj
@@ -53,6 +53,7 @@
 				SmallerTypeCheck="true"
 				RuntimeLibrary="3"
 				EnableFunctionLevelLinking="true"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				ProgramDataBaseFileName="$(IntDir)/"
@@ -146,6 +147,7 @@
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				AssemblerOutput="4"
@@ -239,6 +241,7 @@
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
+				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
 				AssemblerOutput="0"
