--- a/xrQSlim/xrQSlim.vcproj
+++ b/xrQSlim/xrQSlim.vcproj
@@ -119,8 +119,9 @@
 				OmitFramePointers="true"
 				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="x:\xrCore"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;DEBUG;XR_QSLIM_EXPORTS"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;XR_QSLIM_EXPORTS"
 				StringPooling="true"
+				ExceptionHandling="0"
 				RuntimeLibrary="2"
 				BufferSecurityCheck="false"
 				ForceConformanceInForLoopScope="true"
