--- a/xrLC/xrLC.vcproj
+++ b/xrLC/xrLC.vcproj
@@ -56,15 +56,14 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				OmitFramePointers="false"
+				OmitFramePointers="true"
 				EnableFiberSafeOptimizations="true"
 				AdditionalIncludeDirectories="..\xrQSlim\src;x:\xrCore;&quot;X:\External Library\MagicSoftware\FreeMagic\Include&quot;"
-				PreprocessorDefinitions="_USE_MATH_DEFINES;WIN32;_WINDOWS"
+				PreprocessorDefinitions="_USE_MATH_DEFINES,WIN32,_WINDOWS"
 				StringPooling="true"
 				ExceptionHandling="0"
 				RuntimeLibrary="2"
-				BufferSecurityCheck="true"
-				FloatingPointModel="2"
+				BufferSecurityCheck="false"
 				ForceConformanceInForLoopScope="false"
 				RuntimeTypeInfo="true"
 				UsePrecompiledHeader="2"
@@ -103,7 +102,7 @@
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="true"
 				SubSystem="2"
-				LargeAddressAware="2"
+				LargeAddressAware="0"
 				TargetMachine="0"
 			/>
 			<Tool
