--- a/xr_3da/xrCDB/xrCDB.vcxproj
+++ b/xr_3da/xrCDB/xrCDB.vcxproj
@@ -147,6 +147,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <ImportLibrary>x:\xrCDB.lib</ImportLibrary>
       <TargetMachine>NotSet</TargetMachine>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Mixed|Win32'">
