--- a/xr_3da/xrRender_R1/xrRender_R1.vcxproj
+++ b/xr_3da/xrRender_R1/xrRender_R1.vcxproj
@@ -157,6 +157,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <ImportLibrary>$(OutDir)xrRender_R1.lib</ImportLibrary>
       <TargetMachine>MachineX86</TargetMachine>
+      <LargeAddressAware>true</LargeAddressAware>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Mixed|Win32'">
